--- a/app/src/main/res/xml/appmap.xml
+++ b/app/src/main/res/xml/appmap.xml
@@ -24,7 +24,36 @@
     <item class="com.dv.adm.pay/com.dv.adm.pay.Main" name="adm_pro" />
     <item class="com.dv.adm/com.dv.adm.AMain" name="adm_pro" />
     <item class="com.dv.adm/com.dv.adm.Main" name="adm_pro" />
+    <item class="com.android.fileexplorer.MainActivity" name="file_manager"/>
+    <item class="com.oplus.camera.Camera" name="camera"/>
+    <item class="fonts.mono.oneui_2_0.MonoInstallerActivity" name="mono_1"/>
+    <item class="com.dainikbhaskar.ui.MainActivity" name="divya_bhaskar"/>
+    <item class="com.sec.android.app.samsungapps.SKSamsungMainActivity" name="galaxy_store"/>
+    <item class="com.appsomniacs.da2.DA2Activity" name="mini_militia"/>
+    <item class="com.sonyliv.ui.splash.SplashActivity" name="sony_liv"/>
+    <item class="sportsguru.ipl.cricket.expert.activity.SplashScreenActivity" name="sports_guru_pro"/>
+    <item class="xyz.aethersx2.android.MainActivity" name="aethersx2"/>
+    <item class="com.homeretailgroup.argos.android.splash.SplashActivity_Default" name="argos"/>
+    <item class="com.johnemulators.activity.RomListActivity" name="john_gbac"/>
+    <item class="com.johnemulators.activity.RomListActivity" name="john_ness"/>
+    <item class="bruenor.magicbox.uiGameStarterActivity" name="magic_dosbox"/>
+    <item class="com.seleuco.mame4droid.MAME4droid" name="mame4droid_0139u1_"/>
+    <item class="com.imagine.BaseActivity" name="mdemu"/>
+    <item class="com.myfitnesspal.android.login.WelcomeActivity" name="myfitnesspal"/>
+    <item class="com.nostalgiaemulators.gg.GGGalleryActivity" name="nostalgiagg_pro"/>
+    <item class="com.runtastic.android.activities.StartActivity" name="running"/>
+    <item class="com.wallpapers.papers.activities.ActivitySplash" name="papers"/>
     <item class="com.dv.adm.pay.Main" name="adm_pro"/>
+    <item class="a.a" name="button_mapper"/>
+    <item class="moe.zhs.caffeine.MainActivity" name="caffeine"/>
+    <item class="com.footej.camera.SplashActivity" name="footej_camera_2"/>
+    <item class="crc64dd09b2a2e58bb27d.KeePass" name="keepass2android"/>
+    <item class="com.topjohnwu.magisk.ui.MainActivity" name="magisk_manager"/>
+    <item class="canvasm.myo2.SplashActivity" name="mein_oa"/>
+    <item class="balti.migrate.flasher.simpleActivities.MainActivity" name="migrate_flasher"/>
+    <item class="a.a" name="servicely"/>
+    <item class="com.PYOPYO.StarTracker.PSTActivity" name="startracker"/>
+    <item class="rikka.safetynetchecker.main.MainActivity" name="yasnac"/>
     <item class="com.adobe.cc.SplashScreen" name="adobe_creative_cloud" />
     <item class="com.unity3d.player.UnityPlayerActivity" name="player_games_2"/>
     <item class="com.miniclip.eightballpool.EightBallPoolActivity" name="ball_pool_8"/>
@@ -173,6 +202,69 @@
     <item class="bbc.iplayer.android/uk.co.bbc.iplayer.home.HomeActivity" name="bbc_iplayer" />
     <item class="com.instagram.boomerang/com.instagram.boomerang.BoomerangActivity" name="instagram_boomerang" />
     <item class="net.booksy.customer.SplashActivity" name="booksy"/>
+    <item class="de.rki.covpass.app.main.MainActivity" name="covpass"/>
+    <item class="ccc71.at.at_main_popup" name="3c_all-in-one_toolbox"/>
+    <item class="org.adaway.ui.MainActivity" name="adaway"/>
+    <item class="com.ruet_cse_1503050.ragib.appbackup.pro.activities.LauncherActivity" name="alpha_backup_pro"/>
+    <item class="com.example.benchmark.full.MainActivity" name="antutu_3dbench"/>
+    <item class="com.example.ABenchMark.ABenchMarkStart" name="antutu_benchmark"/>
+    <item class="com.mtvstudio.apkextractor.MainActivity" name="apk_extractor"/>
+    <item class="com.asksven.betterbatterystats.StatsActivity" name="betterbatterystats"/>
+    <item class="com.android.camera.CameraLauncher" name="camera"/>
+    <item class="com.osheden.ciclo.activities.SplashActivity" name="ciclo"/>
+    <item class="com.chillibits.colorconverter.ui.activity.MainActivity" name="color_converter"/>
+    <item class="com.appsogreat.connect.ActivityFwkHome" name="connect"/>
+    <item class="de.rki.covpass.app.main.MainActivity" name="covpass"/>
+    <item class="de.deutschlandcard.app.ui.LaunchActivity" name="deutschlandcard"/>
+    <item class="com.android.developeroption.developeroption.MainActivity" name="developer_options"/>
+    <item class="com.evozi.deviceid.MainActivity" name="device_id"/>
+    <item class="ru.qappstd.droper.activities.MainActivity" name="droper"/>
+    <item class="com.oneplus.filemanager.HomePageActivity" name="file_manager"/>
+    <item class="com.android.documentsui.LauncherActivity" name="files"/>
+    <item class="com.franco.kernel.activities.SplashActivity" name="fkm"/>
+    <item class="com.footej.camera.CameraActivity" name="footej_camera_2"/>
+    <item class="dk.appdictive.getcurrentwallpaper.MainActivity" name="get_current_wallpaper"/>
+    <item class="com.google.android.talk.SigningInActivity" name="hangouts"/>
+    <item class="ginlemon.iconpackstudio.editor.homeActivity.HomeActivity" name="icon_pack_studio"/>
+    <item class="com.unity3d.player.UnityPlayerActivity" name="indy_cat"/>
+    <item class="com.countercultured.irc.ServerSelect" name="irc"/>
+    <item class="com.fsck.k9.activity.MessageList" name="k_9_mail"/>
+    <item class="com.kmplayer.activity.SplashActivity" name="kmplayer_pro"/>
+    <item class="org.leo.android.dict.LeoDict" name="leo"/>
+    <item class="com.dp.logcatapp.activities.SplashActivity" name="logcat_reader"/>
+    <item class="com2020.ltediscovery.ui.LtedMainActivity" name="lte_discovery"/>
+    <item class="com.topjohnwu.magisk.core.SplashActivity" name="magisk"/>
+    <item class="com.touchtype.LauncherActivityIcon" name="microsoft_swiftkey_keyboard"/>
+    <item class="balti.migrate.helper.simpleActivities.MainActivityKotlin" name="migrate_helper"/>
+    <item class="com.rhmsoft.play.MainActivity" name="pulsar_plus"/>
+    <item class="balti.migrate.simpleActivities.MainActivityKotlin" name="migrate_gpe"/>
+    <item class="com.mixplorer.activities.BrowseActivity" name="mix"/>
+    <item class="de.zorillasoft.musicfolderplayer.donate.FolderBrowser" name="music_folder_player_full"/>
+    <item class="com.franco.doze.activities.SplashActivity" name="naptime"/>
+    <item class="de.netto.b2c.activity.FragmentActivity" name="netto_app"/>
+    <item class="com.oneplus.healthcheck.MainActivity" name="oneplus_diagnostic"/>
+    <item class="com.oneplus.backuprestore.activity.BootActivity" name="oneplus_switch"/>
+    <item class="com.oxygenupdater.activities.SplashActivity" name="oxygen_updater"/>
+    <item class="com.embermitre.pixolor.app.StartProjectionManagerActivity" name="pixolor"/>
+    <item class="com.rhmsoft.play.MainActivity" name="pulsar+"/>
+    <item class="com.pastagames.android.LaunchActivity" name="rayman_jungle_run"/>
+    <item class="com.oneplus.soundrecorder.SoundRecorder" name="recorder"/>
+    <item class="air.com.qublix.reefgame.AppEntry" name="reef_rescue"/>
+    <item class="com.ice.box.SplashActivity" name="rice_tweaks"/>
+    <item class="de.sipgate.app.satellite.splash.SplashScreenActivity" name="satellite"/>
+    <item class="eu.thedarken.sdm.main.ui.SDMMainActivity" name="sd_maid"/>
+    <item class="air.com.dg.obg.solitaire.quest.elven.wonderland.story.AppEntry" name="solitaire_quest_elven_wonderland_story"/>
+    <item class="com.tortel.syslog.FragmentMainActivity" name="syslog"/>
+    <item class="com.termoneplus.TermActivity" name="terminal_emulator"/>
+    <item class="com.keramidas.TitaniumBackup.MainActivity" name="titanium_backup"/>
+    <item class="com.unity3d.player.UnityPlayerActivity" name="trito's_adventure"/>
+    <item class="hu.tagsoft.ttorrent.statuslist.SplashActivity" name="ttorrent_lite"/>
+    <item class="com.simplexsolutionsinc.vpn_unlimited.ui.screens.splash.SplashScreenActivity" name="vpn_unlimited"/>
+    <item class="com.fossor.wheellauncher.WheelActivity" name="wheel_launcher_full"/>
+    <item class="com.wickr.enterprise.dashboard.DashboardActivity" name="wickr_pro"/>
+    <item class="de.winsim.servicewelt.MainActivity" name="winsim_servicewelt"/>
+    <item class="host.exp.exponent.MainActivity" name="xda_developers"/>
+    <item class="net.zedge.android.Main" name="zedge"/>
     <item class="com.bose.monet.activity.discovery.SplashSearchingActivity" name="bose_connect"/>
     <item class="com.box.android/com.box.android.activities.Authentication" name="box" />
     <item class="com.box.android/com.box.android.activities.SplashScreenActivity" name="box" />
@@ -330,8 +422,6 @@
     <item class="kr.sira.compass/kr.sira.compass.SmartCompass" name="compass" />
     <item class="pl.surix.holo.compass/pl.surix.holo.compass.HoloCompass" name="compass" />
     <item class="com.huawei.compass/com.huawei.compass.MainActivity" name="compass" />
-    <item class="com.appsogreat.connect.ActivityFwkHome" name="connect"/>
-    <item class="com.appsogreat.connect.casual.release/com.appsogreat.connect.ActivityFwkHome" name="connect"/>
     <item class="com.microsoft.cortana/com.microsoft.bing.dss.SplashActivity" name="cortana" />
     <item class="com.unity3d.player.UnityPlayerActivity" name="cover_fire"/>
     <item class="com.cpuid.cpu_z.MainActivity" name="cpuz"/>
@@ -598,7 +688,8 @@
     <item class="a.U" name="magisk_manager"/>
     <item class="com.topjohnwu.magisk/com.topjohnwu.magisk.SplashActivity" name="magisk_manager" />
     <item class="com.topjohnwu.magisk/com.topjohnwu.magisk.core.SplashActivity" name="magisk_manager" />
-    <item class="a.U" name="manager"/>
+    <item class="a.U" name="magisk_manager"/>
+    <item class="ccc71.at.at_main_popup" name="all-in-one_toolbox"/>
     <item class="com.pluscubed.logcat.ui.LogcatActivity" name="matlog"/>
     <item class="com.pluscubed.matlog/com.pluscubed.logcat.ui.LogcatActivity" name="matlog" />
     <item class="mcdonalds.core.SplashActivity.White" name="mcdonalds"/>
